<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_view_dog_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|fill|fill_horizontal|center_vertical"
        android:orientation="vertical"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_dog_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_dog_photo"
        app:layout_constraintTop_toTopOf="@+id/image_view_dog_photo">

        <TextView
            android:id="@+id/text_view_dog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/text_view_dog_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breed" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dog_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:text="@string/details" />

            <Button
                android:id="@+id/button_dog_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:text="@string/dismiss" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>